--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,18 @@ tmp
 .yardoc
 _yardoc
 doc/
+
+Gemfile.lock
+test/dest
+*.gem
+pkg/
+*.swp
+*~
+_site/
+.bundle/
+.DS_Store
+bbin/
+gh-pages/
+site/_site/
+coverage
+.ruby-version
