--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ author :
 # If you have set a CNAME (pages.github.com) set your custom domain here.
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
-#production_url : http://danielsz.github.io
+
+production_url : http://danielsz.github.io
  
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
