--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Perfumed Nightmare
+name: Perfumed Nightmare
+description: When nightmares smell of perfumes, think about me.
+url: http://danielsz.github.io
 tagline: My homepage
 author :
   name : Daniel Szmulewicz
